--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
 		"postinstall": "nuxt prepare",
-    "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
+		"lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
 		"lint:style": "stylelint \"**/*.{vue,css,scss}\" --ignore-path .gitignore",
 		"lint": "npm run lint:js && npm run lint:style",
 		"lintfix": "prettier --write --list-different . && npm run lint:js --fix  && npm run lint:style"
 	},
 	"dependencies": {
 		"@nuxt/ui": "^2.13.0",
+		"@pinia/nuxt": "^0.5.1",
 		"nuxt": "^3.10.2",
 		"nuxt-icons": "^3.2.1",
+		"pinia": "^2.1.7",
 		"vue": "^3.4.19",
 		"vue-router": "^4.2.5"
 	},
@@ -24,6 +26,7 @@
 		"@nuxtjs/color-mode": "^3.3.2",
 		"@nuxtjs/eslint-config-typescript": "^12.1.0",
 		"@nuxtjs/eslint-module": "^4.1.0",
+		"@nuxtjs/i18n": "^8.2.0",
 		"@nuxtjs/stylelint-module": "^5.2.0",
 		"@tailwindcss/typography": "^0.5.10",
 		"@typescript-eslint/parser": "^6.21.0",
@@ -36,6 +39,7 @@
 		"stylelint": "^15.11.0",
 		"stylelint-config-standard-scss": "^11.1.0",
 		"stylelint-prettier": "^4.1.0",
+		"vue-datocms": "^5.1.2",
 		"vue-eslint-parser": "^9.4.2"
 	}
 }
